--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "pharma-game",
+  "name": "pharma-tinder",
   "scripts": {
     "build": "vue-cli-service build",
     "serve": "vue-cli-service serve"
   },
   "dependencies": {
-    "vue": "^2.6.11"
+    "swing": "^3.1.4",
+    "vue": "^2.6.11",
+    "vue-swing": "0.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
